first pass at updating repo for ingestion from PR 75

--- a/feedstock/meta.yaml
+++ b/feedstock/meta.yaml
@@ -1,20 +1,26 @@
-title: "LEAP Data Library Prototype"
+title: "LEAP Data Library"
 description: >
-  A prototype test for the LEAP Data Library refactor
+  eNATL60-TSW-60m is an extraction of a very high resolution oceanic simulation of the North Atlantic performed at MEOM, IGE (FRANCE)
 recipes:
-  - id: "small"
-    object: "recipe:small"
-  - id: "large"
-    object: "recipe:large"
+  - id: eNATL60_BLBT02
+    object: "eNATL60:eNATL60_BLBT02"
 provenance:
   providers:
-    - name: "Julius"
-      description: "Just a guy testing some recipes. Nothing to see here."
+    - name: "Zenodo"
+      description: "Zenodo"
+      roles:
+        - host
+      url: https://zenodo.org/records/10261274
+    - name: "TBD"
+      description: "TODO"
       roles:
         - producer
         - licensor
-  license: "Just a Test"
+  license: "unknown"
 maintainers:
   - name: "Julius Busecke"
-    orcid: "0000-0001-8571-865X"
+    orcid: 0000-0001-8571-865X
     github: jbusecke
+  - name: "Charles Stern"
+    orcid: 0000-0002-4078-0852
+    github: cisaacstern
