--- a/feedstock/meta.yaml
+++ b/feedstock/meta.yaml
@@ -1,26 +1,20 @@
-title: "LEAP Data Library"
+title: "LEAP Data Library Prototype"
 description: >
-  eNATL60-TSW-60m is an extraction of a very high resolution oceanic simulation of the North Atlantic performed at MEOM, IGE (FRANCE)
+  A prototype test for the LEAP Data Library refactor
 recipes:
-  - id: eNATL60_BLBT02
-    object: "eNATL60:eNATL60_BLBT02"
+  - id: "small"
+    object: "recipe:small"
+  - id: "large"
+    object: "recipe:large"
 provenance:
   providers:
-    - name: "Zenodo"
-      description: "Zenodo"
-      roles:
-        - host
-      url: https://zenodo.org/records/10261274
-    - name: "TBD"
-      description: "TODO"
+    - name: "Julius"
+      description: "Just a guy testing some recipes. Nothing to see here."
       roles:
         - producer
         - licensor
-  license: "unknown"
+  license: "Just a Test"
 maintainers:
   - name: "Julius Busecke"
-    orcid: 0000-0001-8571-865X
+    orcid: "0000-0001-8571-865X"
     github: jbusecke
-  - name: "Charles Stern"
-    orcid: 0000-0002-4078-0852
-    github: cisaacstern
