--- a/feedstock/catalog.yaml
+++ b/feedstock/catalog.yaml
@@ -1,16 +1,13 @@
-# All the information important to cataloging.
-"ncviewjs:meta_yaml_url": "https://github.com/leap-stc/proto_feedstock/blob/main/feedstock/meta.yaml"
-tags:
-  - my-custom-tag
-  - zarr
-stores:
-  - id: "small"
-    name: "The cool small Proto Dataset"
-    url: "gs://leap-scratch/data-library/feedstocks/proto_feedstock/small.zarr"
-    "ncviewjs:rechunking":
-      - path: "gs://some-bucket/small.zarr"
-        use_case: "multiscales"
 
-  - id: "large"
-    name: "The even cooler large Proto Dataset" # no pyramids
-    url: "gs://leap-scratch/data-library/feedstocks/proto_feedstock/large.zarr"
+# All the information important to cataloging.
+"ncviewjs:meta_yaml_url": "https://github.com/leap-stc/eNATL_feedstock/blob/main/feedstock/meta.yaml"
+tags:
+  - zarr
+  - ocean
+stores:
+  - id: "enatl60-blbt02"
+    name: "Needs a name"
+    url: "gs://leap-persistent/data-library/feedstocks/eNATL_feedstock/eNATL60-BLBT02.zarr"
+  - id: "enatl60-blbt02-pyramid"
+    name: "enatl-pyramid"
+    url: "gs://leap-persistent/data-library/feedstocks/eNATL_feedstock/eNATL60-BLBT02-pyramid.zarr"
