--- a/feedstock/meta.yaml
+++ b/feedstock/meta.yaml
@@ -26,3 +26,6 @@ maintainers:
   - name: "Charles Stern"
     orcid: 0000-0002-4078-0852
     github: cisaacstern
+  - name: "Raphael Hagen"
+    orcid: 0000-0003-1994-1153
+    github: norlandrhagen
