--- a/feedstock/meta.yaml
+++ b/feedstock/meta.yaml
@@ -2,9 +2,9 @@ title: "LEAP Data Library"
 description: >
   eNATL60-TSW-60m is an extraction of a very high resolution oceanic simulation of the North Atlantic performed at MEOM, IGE (FRANCE)
 recipes:
-  - id: eNATL60_BLBT02
+  - id: eNATL60-BLBT02
     object: "eNATL60:eNATL60_BLBT02"
-  - id: eNATL60_BLBT02_pyramid
+  - id: eNATL60-BLBT02-pyramid
     object: "pyramid:pyramid"
 provenance:
   providers:
