--- a/feedstock/requirements.txt
+++ b/feedstock/requirements.txt
@@ -2,5 +2,5 @@ pangeo-forge-recipes==0.10.4
 gcsfs
 apache-beam[gcp]
 leap-data-management-utils==0.0.12
-xarray=2024.05.0
+xarray==2024.05.0
 pangeo-forge-ndpyramid
