--- a/feedstock/meta.yaml
+++ b/feedstock/meta.yaml
@@ -3,7 +3,7 @@ description: >
   eNATL60-TSW-60m is an extraction of a very high resolution oceanic simulation of the North Atlantic performed at MEOM, IGE (FRANCE)
 recipes:
   - id: enatl60-blbt02
-    object: "eNATL60:eNATL60_BLBT02"
+    object: "eNATL60:eNATL60BLBT02"
 provenance:
   providers:
     - name: "Zenodo"
