--- a/.github/workflows/deploy_recipe.yaml
+++ b/.github/workflows/deploy_recipe.yaml
@@ -25,7 +25,7 @@ jobs:
       - name: "Install dependencies"
         run: |
           python -m pip install --upgrade pip
-          pip install pangeo-forge-runner
+          pip install git+https://github.com/leap-stc/pangeo-forge-runner
       - name: "Deploy recipes"
         run: |
           pangeo-forge-runner bake \
