--- a/feedstock/meta.yaml
+++ b/feedstock/meta.yaml
@@ -4,7 +4,7 @@ description: >
 recipes:
   - id: eNATL60_BLBT02
     object: "eNATL60:eNATL60_BLBT02"
-  - id: pooch-recipe
+  - id: poochrecipe
     object: "poochtransfer:poochpipeline"
 provenance:
   providers:
