--- a/feedstock/meta.yaml
+++ b/feedstock/meta.yaml
@@ -1,4 +1,4 @@
-title: "eNATL"
+title: "eNATL 60m"
 description: >
   eNATL60-TSW-60m is an extraction of a very high resolution oceanic simulation of the North Atlantic performed at MEOM, IGE (FRANCE)
 recipes:
