--- a/feedstock/catalog.yaml
+++ b/feedstock/catalog.yaml
@@ -10,3 +10,7 @@ stores:
     name: "eNATL 60M"
     description: "eNATL60-TSW-60m is an extraction of a very high resolution oceanic simulation of the North Atlantic performed at MEOM, IGE (FRANCE). It contians temperature, salinity and vertical velocity fields at 60m."
     url: "gs://leap-persistent/data-library/feedstocks/eNATL_feedstock/eNATL60-BLBT02.zarr"
+  - id: "enatl600m-blbt02"
+    name: "eNATL 600M"
+    description: "eNATL60-TSW-600m is an extraction of a very high resolution oceanic simulation of the North Atlantic performed at MEOM, IGE (FRANCE). It contians temperature, salinity and vertical velocity fields at 600m."
+    url: "gs://leap-persistent/data-library/feedstocks/eNATL_feedstock/eNATL600m-BLBT02.zarr"
