--- a/feedstock/meta.yaml
+++ b/feedstock/meta.yaml
@@ -1,9 +1,12 @@
-title: "eNATL 60m"
+title: "eNATL"
 description: >
-  eNATL60-TSW-60m is an extraction of a very high resolution oceanic simulation of the North Atlantic performed at MEOM, IGE (FRANCE)
+  eNATL60-TSW-60m & 600m are extractions of a very high resolution oceanic simulation of the North Atlantic performed at MEOM, IGE (FRANCE).
 recipes:
   - id: enatl60-blbt02
     object: "eNATL60:eNATL60BLBT02"
+  - id: enatl600m-blbt02
+    object: "eNATL600:eNATL600BLBT02"
+
 provenance:
   providers:
     - name: "Zenodo"
