--- a/feedstock/requirements.txt
+++ b/feedstock/requirements.txt
@@ -1,8 +1,7 @@
 pangeo-forge-recipes==0.10.7
 gcsfs
-apache-beam[gcp] >= 2.58.0
+apache-beam[gcp,interactive,dataframe]
 leap-data-management-utils==0.0.12
-xarray==2024.05.0
-pooch
-h5netcdf
+xarray
 netcdf4
+pyopenssl
