--- a/.github/workflows/deploy_xbeam.yaml
+++ b/.github/workflows/deploy_xbeam.yaml
@@ -47,7 +47,8 @@ jobs:
           --project leap-pangeo \
           --job_name $JOB_NAME \
           --region us-central1 \
-          --machine_type n2d-highmem-48		 \
-          --max_num_workers 10 \
+          --machine_type n2d-highmem-96		 \
+          --max_cache_memory_usage_mb=1000 \
+          --max_num_workers 5 \
           --temp_location gs://leap-scratch/norlandrhagen/dataflow_temp/temp/ \
           --staging_location gs://leap-scratch/norlandrhagen/dataflow_temp/staging/
